add link to github profile in footer

--- a/src/styles/section_footer.scss
+++ b/src/styles/section_footer.scss
@@ -23,4 +23,9 @@
     display: inline-block;
     line-height: 38px;
   }
+
+  a:hover > p {
+    text-decoration: underline;
+    cursor: pointer;
+  }
 }
